# CMake-for-SDL2-Whitespace-Error

./: CMakeLists.txt  README.md
